# 2D-FDTD

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: 1DPointSource.cpp  1DPointSourcePML.cpp  1DPointSourceWLoss.cpp  2DPlaneWave.cpp  2DPlaneWaveIncident.cpp  2DPlaneWaveIncidentTotal.cpp  2DPlaneWaveWLoss.cpp  2DPointSource.cpp  2DPointSourcePML.cpp  2DPointSourceWLoss.cpp  FDTD1D_1.cpp  FDTD1D_2.cpp  FDTD1D_3.cpp  FDTD2D_1.cpp  FDTD2D_2.cpp  FDTD2D_3.cpp  README.md  waveguideAttenuation.cpp  waveguideTE1.cpp  waveguideTE5.cpp
python/: 1DFinalPlotter.py  2DFinalPlotter.py  computeAttenuation.py  computeTransCoef.py  computeWaveguideSigma.py  waveguideDesign.py
src/: 1DBareBone.h  2DBareBone.h  constants.h  pulses.h  snapshot.h
